fix icons too big

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1205,13 +1205,6 @@ input[type='color'] {
     }
 }
 
-.fas,
-.far,
-.fab {
-    font-size: 1.2em;
-}
-
-/* this needs to be defined after the previous block */
 .fa-2x {
     font-size: 1.6em;
 }
